# grafika-linux-skeleton

./: CMakeLists.txt  GreenTriangle.cpp  GreenTriangleNaked.cpp  README.md  cbuild.sh  vasarelyAnimation.cpp
